# aws-s3-file-upload-api-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  pushECRnew.sh
src/: main.rs
